<resources>
    <string name="name">OnlineShop</string>
    <string name="app_name">OnlineShop</string>
    <string name="action_settings">Settings</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_about_us">AboutUs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="error_no_sensor">No sensor</string>

    <string name="label_proximity">Proximity (cm): %1$.2f</string>
    <string name="label_light">Light (lux): %1$.2f</string>
    <string name="label_pressure">Pressure (hPa): %1$.2f</string>
    <string name="label_humidity">Relative humidity (percentage): %1$.2f</string>
    <string name="label_temperature">Ambient temperature (celsius): %1$.2f</string>
    <string name="label_magnetic">Magnetic field: North: %1$.2f</string>
</resources>
