<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SensorActivity"
    tools:showIn="@layout/activity_sensor">

    <TextView
        android:id="@+id/label_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_proximity"
        app:layout_constraintTop_toBottomOf="@+id/label_light"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pressure"
        app:layout_constraintTop_toBottomOf="@+id/label_proximity"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_humidity"
        app:layout_constraintTop_toBottomOf="@+id/label_pressure"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_temperature"
        app:layout_constraintTop_toBottomOf="@+id/label_humidity"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_magnetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_magnetic"
        app:layout_constraintTop_toBottomOf="@+id/label_temperature"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>